# nephyr_examples

./: .gitignore  nephyr_examples.code-workspace  workspace.code-workspace
app_blinky/: CMakeLists.txt  VERSION  app_blinky.nimble  config.nims  prj.conf
app_blinky/boards/: lpcxpresso55s69_cpu0.conf  nucleo_h745zi_q_m7.conf  nucleo_h745zi_q_m7.overlay  qemu_cortex_m3.conf  teensy41.conf  teensy41.overlay
app_blinky/envs/: feather-nrf52840.env
app_blinky/src/: hal_ads131e08.nim  main.nim  rpc_server.nim  taskServer.nim
app_net_rpc/: .gitignore  CMakeLists.txt  Makefile  README.md  config.nims  nephyr_example_app.nimble  prj.conf  rpc_cli  setup-env.sh  test-image-signing.md
app_net_rpc/boards/: adafruit_feather_nrf52840.conf  teensy41.conf  (+7 more)
app_rand_blinky/: config.nims
app_rpc_basic/: prj.conf
app_rpc_subscriptions/: BOARD  config.nims
app_sensors/: .gitignore  CMakeLists.txt  Makefile  README.rst  config.nims  default-feather-nrf52840-test-single-sf05.env  default-feather-nrf52840.env  default.env  dumb_http_server.nimble  prj.conf  test.sh
app_zephyr_apis/: .gitignore  CMakeLists.txt  config.nims  prj.conf
blinky/: workspace.code-workspace
boards/: adafruit_feather_nrf52840.conf  qemu_x86.conf
devcontainer/: Dockerfile  devcontainer.json
envs/: default-feather-nrf52840-test-single-sf05.env  default-feather-nrf52840.env
hello_world/: CMakeLists.txt
hello_world/boards/: adafruit_feather_nrf52840.overlay  nucleo_h745zi_q_m7.overlay
hello_world/tests/: spi_defines.nim
rpc_subscriptions/: workspace.code-workspace
vscode/: settings.json
(+93 files in other folders)
